Updated theme naming and created develop branch

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,6 +1,6 @@
 /*!
 Theme Name: Skinny Ninjah
-Theme URI: http://underscores.me/
+Theme URI: https://github.com/thulanimatshoba/skinny-ninjah
 Author: Thulani Matshoba
 Author URI: http://thulanimatshoba.co.za
 Description: This is a Wordpress theme called Skinny Ninjah... fully customisable
