--- a/sass/abstracts/variables/_colors.scss
+++ b/sass/abstracts/variables/_colors.scss
@@ -1,12 +1,16 @@
-$color__background-body: #fff;
+$color_white: #fff;
+$color_black: #000;
+$color_red: #f00;
+$color_grey: #ccc;
+$color_dark_grey: #666;
+
+
 $color__background-screen: #f1f1f1;
-$color__background-hr: #ccc;
+
 $color__background-button: #e6e6e6;
 $color__background-pre: #eee;
 $color__background-ins: #fff9c0;
-
 $color__text-screen: #21759b;
-$color__text-input: #666;
 $color__text-input-focus: #111;
 $color__link: #4169e1; //royalblue
 $color__link-visited: #800080; //purple
