--- a/style.css
+++ b/style.css
@@ -24,6 +24,7 @@ Nicolas Gallagher and Jonathan Neal https://necolas.github.io/normalize.css/
 /*--------------------------------------------------------------
 >>> TABLE OF CONTENTS:
 --------------------------------------------------------------*/
+@import url("https://fonts.googleapis.com/css2?family=Raleway:wght@100;200;300;400;500;600;800&display=swap");
 /*--------------------------------------------------------------
 # Generic
 --------------------------------------------------------------*/
@@ -527,7 +528,7 @@ select,
 optgroup,
 textarea {
 	color: #404040;
-	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
+	font-family: "Raleway", sans-serif;
 	font-size: 1rem;
 	line-height: 1.5;
 }
@@ -736,6 +737,10 @@ big {
 	outline: 0;
 }
 
+header {
+	background: #4169e1;
+}
+
 /*--------------------------------------------------------------
 # Layouts
 --------------------------------------------------------------*/
@@ -746,14 +751,10 @@ big {
 --------------------------------------------- */
 .main-navigation {
 	display: block;
-	width: 100%;
 }
 
 .main-navigation ul {
-	display: none;
 	list-style: none;
-	margin: 0;
-	padding-left: 0;
 }
 
 .main-navigation ul ul {
@@ -785,28 +786,9 @@ big {
 	left: auto;
 }
 
-.main-navigation li {
-	position: relative;
-}
-
 .main-navigation a {
 	display: block;
 	text-decoration: none;
-}
-
-/* Small menu. */
-.menu-toggle,
-.main-navigation.toggled ul {
-	display: block;
-}
-
-@media screen and (min-width: 37.5em) {
-	.menu-toggle {
-		display: none;
-	}
-	.main-navigation ul {
-		display: flex;
-	}
 }
 
 .site-main .comment-navigation, .site-main
