--- a/woocommerce.css
+++ b/woocommerce.css
@@ -3,6 +3,7 @@ Theme Name: Skinny Ninjah
 
 WooCommerce styles override
 */
+@import url("https://fonts.googleapis.com/css2?family=Raleway:wght@100;200;300;400;500;600;800&display=swap");
 /**
  * Shop tables
  */
