Added footer widgets

--- a/sass/abstracts/variables/_colors.scss
+++ b/sass/abstracts/variables/_colors.scss
@@ -3,6 +3,13 @@ $color_black: #000;
 $color_red: #f00;
 $color_grey: #ccc;
 $color_dark_grey: #666;
+$color_footer_bg: #191919;
+$color__border-abbr: #666;
+
+$facebook_color: #3b5998;
+$twitter_color: #33ccff;
+$instagram_color: #336699;
+$youtube_color: #c4302b;
 
 
 $color__background-screen: #f1f1f1;
@@ -21,4 +28,4 @@ $color__border-button: #ccc #ccc #bbb;
 $color__border-button-hover: #ccc #bbb #aaa;
 $color__border-button-focus: #aaa #bbb #bbb;
 $color__border-input: #ccc;
-$color__border-abbr: #666;
+
