Fixed the sticky header and added autoplay on the slider

--- a/sass/components/content/_posts-and-pages.scss
+++ b/sass/components/content/_posts-and-pages.scss
@@ -1,4 +1,12 @@
 /* Home Page Styling */
+.home header#masthead {
+	position: absolute;
+
+	&.uk-sticky-below {
+		background: black;
+	}
+}
+
 .slider-image img {
 	width: 100%;
 }
@@ -24,16 +32,6 @@
 .sticky {
 	display: block;
 }
-
-// .skinny-ninjah-overlay {
-//     content: "";
-//     position: absolute;
-//     left: 0;
-//     right: 0;
-//     top: 0;
-//     bottom: 0;
-//     background-color: rgba(0,0,0,0.3);
-// }
 
 .post,
 .page {
