Added video option on page slider

--- a/sass/abstracts/variables/_colors.scss
+++ b/sass/abstracts/variables/_colors.scss
@@ -10,6 +10,8 @@ $facebook_color: #3b5998;
 $twitter_color: #33ccff;
 $instagram_color: #336699;
 $youtube_color: #c4302b;
+$strava_color: 	#FC4C02;
+$tiktok_color:  #69C9D0;
 
 
 $color__background-screen: #f1f1f1;
