--- a/style.css
+++ b/style.css
@@ -792,6 +792,14 @@ big {
 	content: '\f17e';
 }
 
+.social-links a[href*="strava.com"]::before {
+	content: '\f428';
+}
+
+.social-links a[href*="tiktok.com"]::before {
+	content: '\e07b';
+}
+
 .social-links a:hover[href*="facebook.com"]::before {
 	color: #3b5998;
 }
@@ -806,6 +814,14 @@ big {
 
 .social-links a:hover[href*="youtube.com"]::before {
 	color: #c4302b;
+}
+
+.social-links a:hover[href*="strava.com"]::before {
+	color: #FC4C02;
+}
+
+.social-links a:hover[href*="tiktok.com"]::before {
+	color: #69C9D0;
 }
 
 /*--------------------------------------------------------------
@@ -967,6 +983,17 @@ footer#colophon {
 		bottom: 0;
 		left: 0;
 	}
+}
+
+footer#colophon .footer-top ul {
+	margin: 0;
+	list-style: none;
+	padding-left: 0;
+}
+
+footer#colophon .footer-top ul li {
+	border-bottom: 1px solid #232323;
+	padding: 10px 10px 10px 0;
 }
 
 .sticky {
