--- a/sass/components/content/_posts-and-pages.scss
+++ b/sass/components/content/_posts-and-pages.scss
@@ -27,6 +27,58 @@
 	}
 }
 
+/* Portfolio */
+#portfolio {
+	.category-block {
+		padding-left: 0;
+		margin-top: 0 !important;
+
+		.portfolio-block {
+			padding-left: 0;
+			margin-top: 0 !important;
+
+			img {
+				transition: all 400ms ease-in-out;
+			}
+
+			.portfolio-content {
+				position: absolute;
+				width: 100%;
+				top: 50%;
+				font-weight: 700;
+				color: #fff;
+				z-index: 1;
+				opacity: 0;
+				transition: all 400ms ease-in-out;
+
+				h5 {
+					color: #fff;
+				}
+			}
+
+			&:after {
+				content: "";
+				position: absolute;
+				left: 0;
+				right: 0;
+				top: 0;
+				bottom: 0;
+				background-color: rgba(0, 0, 0, 0.3);
+			}
+
+			&:hover {
+				& > img {
+					transform: scale(1.1);
+				}
+
+				& > .portfolio-content {
+					opacity: 1;
+				}
+			}
+		}
+	}
+}
+
 
 
 .sticky {
