--- a/style.css
+++ b/style.css
@@ -913,6 +913,54 @@ big {
 	background-color: rgba(0, 0, 0, 0.3);
 }
 
+/* Portfolio */
+#portfolio .category-block {
+	padding-left: 0;
+	margin-top: 0 !important;
+}
+
+#portfolio .category-block .portfolio-block {
+	padding-left: 0;
+	margin-top: 0 !important;
+}
+
+#portfolio .category-block .portfolio-block img {
+	transition: all 400ms ease-in-out;
+}
+
+#portfolio .category-block .portfolio-block .portfolio-content {
+	position: absolute;
+	width: 100%;
+	top: 50%;
+	font-weight: 700;
+	color: #fff;
+	z-index: 1;
+	opacity: 0;
+	transition: all 400ms ease-in-out;
+}
+
+#portfolio .category-block .portfolio-block .portfolio-content h5 {
+	color: #fff;
+}
+
+#portfolio .category-block .portfolio-block:after {
+	content: "";
+	position: absolute;
+	left: 0;
+	right: 0;
+	top: 0;
+	bottom: 0;
+	background-color: rgba(0, 0, 0, 0.3);
+}
+
+#portfolio .category-block .portfolio-block:hover > img {
+	transform: scale(1.1);
+}
+
+#portfolio .category-block .portfolio-block:hover > .portfolio-content {
+	opacity: 1;
+}
+
 .sticky {
 	display: block;
 }
