Added social sharing, added breadcrumbs, added article template page and rmoved un used css

--- a/sass/abstracts/variables/_colors.scss
+++ b/sass/abstracts/variables/_colors.scss
@@ -3,6 +3,7 @@ $color_black: #000;
 $color_red: #f00;
 $color_grey: #ccc;
 $color_dark_grey: #666;
+$color_bg_gradient: -webkit-linear-gradient(left, #362f2d, #534741);
 $color_footer_bg: #191919;
 $color__border-abbr: #666;
 
@@ -22,7 +23,6 @@ $color__background-ins: #fff9c0;
 $color__text-screen: #21759b;
 $color__text-input-focus: #111;
 $color__link: #4169e1; //royalblue
-$color__link-visited: #800080; //purple
 $color__link-hover: #191970; //midnightblue
 $color__text-main: #404040;
 
