--- a/sass/components/content/_posts-and-pages.scss
+++ b/sass/components/content/_posts-and-pages.scss
@@ -2,12 +2,17 @@
 .home {
 	header#masthead {
 		position: absolute;
+		border-bottom: none;
 	}
 }
 
 header#masthead {
+	z-index: 999;
+	border-bottom: 1px solid #e9e9e9;
 	&.uk-sticky-below {
 		background: $color_bg_gradient;
+		border-bottom: none;
+		box-shadow: 1px 2px 4px #00000042;
 	}
 }
 
@@ -122,7 +127,6 @@ header#masthead {
 	}
 }
 
-
 .home-page-content-list {
 	li {
 		list-style: none;
@@ -152,9 +156,30 @@ header#masthead {
 }
 
 /* Articles */
+.single {
+	.entry-meta {
+		border-bottom: 1px solid $color_grey;
+	}
+
+	#comments {
+		ul {
+			list-style: none;
+
+			li {
+				ul {
+					li {
+						border-left: 2px solid $color_grey;
+						margin-bottom: 10px;
+						padding-left: 15px;
+					}
+				}
+			}
+		}
+	}
+}
+
 .breadcrumbs {
 	background: -webkit-linear-gradient(left, #362f2d, #534741);
-
 	span {
 		color: $color_white;
 	}
