--- a/style.css
+++ b/style.css
@@ -333,7 +333,7 @@ html {
 }
 
 a {
-	color: #4169e1;
+	color: #41cb52;
 }
 
 a:hover, a:focus, a:active {
@@ -850,6 +850,18 @@ big {
 	text-decoration: none;
 }
 
+.main-navigation a:hover {
+	color: #41cb52 !important;
+}
+
+.main-navigation .current_page_item > a,
+.main-navigation .current-menu-item > a,
+.main-navigation .current_page_ancestor > a,
+.main-navigation .current_page_parent > a,
+.main-navigation .current-menu-ancestor > a {
+	color: #41cb52;
+}
+
 .site-main .comment-navigation, .site-main
 .posts-navigation, .site-main
 .post-navigation {
@@ -892,6 +904,17 @@ header#masthead.uk-sticky-below {
 	background: -webkit-linear-gradient(left, #362f2d, #534741);
 	border-bottom: none;
 	box-shadow: 1px 2px 4px #00000042;
+}
+
+header#masthead .uk-navbar:after {
+	background: url(/wp-content/themes/skinny-ninjah/images/shadow1.png) no-repeat center top;
+	bottom: -41px;
+	content: "";
+	display: block;
+	left: 0;
+	width: 100%;
+	height: 42px;
+	position: absolute;
 }
 
 /* Page Slider */
@@ -1040,12 +1063,30 @@ header#masthead.uk-sticky-below {
 	padding-left: 15px;
 }
 
-.breadcrumbs {
-	background: -webkit-linear-gradient(left, #362f2d, #534741);
+.post-thumbnail:before {
+	transform: rotate(-3deg);
+	left: 10px;
 }
 
-.breadcrumbs span {
-	color: #fff;
+.post-thumbnail:after {
+	transform: rotate(3deg);
+	right: 10px;
+	left: auto;
+}
+
+.post-thumbnail:before, .post-thumbnail:after {
+	position: absolute;
+	content: "";
+	bottom: 33px;
+	width: 50%;
+	top: 80%;
+	max-width: 500px;
+	box-shadow: 0 15px 10px #878282;
+}
+
+.breadcrumbs {
+	background: #cccccc40;
+	z-index: 999;
 }
 
 .sticky {
@@ -1114,15 +1155,6 @@ footer#colophon .site-info {
 	background-image: linear-gradient(275deg, #191919 39%, #f00 100%);
 }
 
-#loader-wrapper {
-	position: fixed;
-	top: 0;
-	left: 0;
-	width: 100%;
-	height: 100%;
-	z-index: 1000;
-}
-
 #loader-wrapper #loader {
 	display: block;
 	position: relative;
@@ -1134,80 +1166,50 @@ footer#colophon .site-info {
 	border-radius: 50%;
 	border: 3px solid transparent;
 	border-top-color: #fff;
-	-webkit-animation: spin 2s linear infinite;
-	/* Chrome, Opera 15+, Safari 5+ */
 	animation: spin 2s linear infinite;
-	/* Chrome, Firefox 16+, IE 10+, Opera */
 	z-index: 1001;
 }
 
-#loader-wrapper #loader:before {
+#loader-wrapper #loader:before, #loader-wrapper #loader:after {
 	content: "";
 	position: absolute;
+	border-radius: 50%;
+	border: 3px solid transparent;
+}
+
+#loader-wrapper #loader:before {
 	top: 5px;
 	left: 5px;
 	right: 5px;
 	bottom: 5px;
-	border-radius: 50%;
-	border: 3px solid transparent;
 	border-top-color: #e74c3c;
-	-webkit-animation: spin 3s linear infinite;
-	/* Chrome, Opera 15+, Safari 5+ */
 	animation: spin 3s linear infinite;
-	/* Chrome, Firefox 16+, IE 10+, Opera */
 }
 
 #loader-wrapper #loader:after {
-	content: "";
-	position: absolute;
 	top: 15px;
 	left: 15px;
 	right: 15px;
 	bottom: 15px;
-	border-radius: 50%;
-	border: 3px solid transparent;
 	border-top-color: #f9c922;
-	-webkit-animation: spin 1.5s linear infinite;
-	/* Chrome, Opera 15+, Safari 5+ */
 	animation: spin 1.5s linear infinite;
-	/* Chrome, Firefox 16+, IE 10+, Opera */
 }
 
 @-webkit-keyframes spin {
 	0% {
-		-webkit-transform: rotate(0deg);
-		/* Chrome, Opera 15+, Safari 3.1+ */
-		-ms-transform: rotate(0deg);
-		/* IE 9 */
 		transform: rotate(0deg);
-		/* Firefox 16+, IE 10+, Opera */
 	}
 	100% {
-		-webkit-transform: rotate(360deg);
-		/* Chrome, Opera 15+, Safari 3.1+ */
-		-ms-transform: rotate(360deg);
-		/* IE 9 */
 		transform: rotate(360deg);
-		/* Firefox 16+, IE 10+, Opera */
 	}
 }
 
 @keyframes spin {
 	0% {
-		-webkit-transform: rotate(0deg);
-		/* Chrome, Opera 15+, Safari 3.1+ */
-		-ms-transform: rotate(0deg);
-		/* IE 9 */
 		transform: rotate(0deg);
-		/* Firefox 16+, IE 10+, Opera */
 	}
 	100% {
-		-webkit-transform: rotate(360deg);
-		/* Chrome, Opera 15+, Safari 3.1+ */
-		-ms-transform: rotate(360deg);
-		/* IE 9 */
 		transform: rotate(360deg);
-		/* Firefox 16+, IE 10+, Opera */
 	}
 }
 
@@ -1218,12 +1220,7 @@ footer#colophon .site-info {
 	height: 100%;
 	background: #222222;
 	z-index: 1000;
-	-webkit-transform: translateX(0);
-	/* Chrome, Opera 15+, Safari 3.1+ */
-	-ms-transform: translateX(0);
-	/* IE 9 */
 	transform: translateX(0);
-	/* Firefox 16+, IE 10+, Opera */
 }
 
 #loader-wrapper .loader-section.section-left {
@@ -1235,28 +1232,6 @@ footer#colophon .site-info {
 }
 
 /* Loaded */
-.loaded #loader-wrapper .loader-section.section-left {
-	-webkit-transform: translateX(-100%);
-	/* Chrome, Opera 15+, Safari 3.1+ */
-	-ms-transform: translateX(-100%);
-	/* IE 9 */
-	transform: translateX(-100%);
-	/* Firefox 16+, IE 10+, Opera */
-	-webkit-transition: all 0.7s 0.3s cubic-bezier(0.645, 0.045, 0.355, 1);
-	transition: all 0.7s 0.3s cubic-bezier(0.645, 0.045, 0.355, 1);
-}
-
-.loaded #loader-wrapper .loader-section.section-right {
-	-webkit-transform: translateX(100%);
-	/* Chrome, Opera 15+, Safari 3.1+ */
-	-ms-transform: translateX(100%);
-	/* IE 9 */
-	transform: translateX(100%);
-	/* Firefox 16+, IE 10+, Opera */
-	-webkit-transition: all 0.7s 0.3s cubic-bezier(0.645, 0.045, 0.355, 1);
-	transition: all 0.7s 0.3s cubic-bezier(0.645, 0.045, 0.355, 1);
-}
-
 .loaded #loader {
 	opacity: 0;
 	-webkit-transition: all 0.3s ease-out;
@@ -1265,14 +1240,24 @@ footer#colophon .site-info {
 
 .loaded #loader-wrapper {
 	visibility: hidden;
-	-webkit-transform: translateY(-100%);
-	/* Chrome, Opera 15+, Safari 3.1+ */
-	-ms-transform: translateY(-100%);
-	/* IE 9 */
 	transform: translateY(-100%);
-	/* Firefox 16+, IE 10+, Opera */
-	-webkit-transition: all 0.3s 1s ease-out;
 	transition: all 0.3s 1s ease-out;
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	z-index: 1000;
+}
+
+.loaded #loader-wrapper .loader-section.section-left {
+	transform: translateX(-100%);
+	transition: all 0.7s 0.3s cubic-bezier(0.645, 0.045, 0.355, 1);
+}
+
+.loaded #loader-wrapper .loader-section.section-right {
+	transform: translateX(100%);
+	transition: all 0.7s 0.3s cubic-bezier(0.645, 0.045, 0.355, 1);
 }
 
 /* JavaScript Turned Off */
