Added wave border Added our client block Added registration Added scroll to top Added blog component template

--- a/sass/abstracts/variables/_colors.scss
+++ b/sass/abstracts/variables/_colors.scss
@@ -1,12 +1,13 @@
-$color_primary: #41cb52;
+$color_primary: #76324b;
+$color_secondary: #636468;
 $color_white: #fff;
 $color_black: #000;
-$color_red: #f00;
 $color_grey: #ccc;
 $color_dark_grey: #666;
 $color_bg_gradient: -webkit-linear-gradient(left, #362f2d, #534741);
 $color_footer_bg: #191919;
-$color__border-abbr: #666;
+
+$logo_color: #636468;
 
 $facebook_color: #3b5998;
 $twitter_color: #33ccff;
@@ -14,7 +15,6 @@ $instagram_color: #336699;
 $youtube_color: #c4302b;
 $strava_color: 	#FC4C02;
 $tiktok_color:  #69C9D0;
-
 
 $color__background-screen: #f1f1f1;
 
@@ -30,5 +30,3 @@ $color__text-main: #404040;
 $color__border-button: #ccc #ccc #bbb;
 $color__border-button-hover: #ccc #bbb #aaa;
 $color__border-button-focus: #aaa #bbb #bbb;
-$color__border-input: #ccc;
-
