--- a/sass/components/content/_posts-and-pages.scss
+++ b/sass/components/content/_posts-and-pages.scss
@@ -10,7 +10,7 @@ header#masthead {
 	z-index: 999;
 	border-bottom: 1px solid #e9e9e9;
 	&.uk-sticky-below {
-		background: $color_bg_gradient;
+		background: $logo_color;
 		border-bottom: none;
 		box-shadow: 1px 2px 4px #00000042;
 	}
@@ -47,6 +47,22 @@ header#masthead {
 		top: 0;
 		bottom: 0;
 		background-color: rgba(0,0,0,0.3);
+	}
+}
+
+.waves-top-shape {
+	top: -40px;
+
+	svg {
+		width: 100%;
+		height: 40px;
+		position: relative;
+		left: 50%;
+		transform: translate(-50%) rotate(180deg);
+
+		path.skinny-ninjah-shape-fill {
+			fill: $color_white;
+		}
 	}
 }
 
@@ -128,6 +144,37 @@ header#masthead {
 				content: "+";
 			}
 		}
+	}
+}
+
+/* Company Values */
+.company-values {
+	.uk-grid-small>* {
+		padding-left: 0;
+	}
+
+	.uk-card-default, .uk-card-secondary {
+		background: $color_primary;
+		color: $color_white;
+
+		.uk-card-title {
+			color: $color_white;
+		}
+	}
+
+	.uk-card-primary {
+		background:  $color_secondary;
+	}
+
+}
+
+/* Our Clients */
+.our-clients {
+	background: $color_secondary;
+
+	figure.clients-thumbnail {
+		max-width: 190px;
+		margin: auto;
 	}
 }
 
@@ -248,7 +295,7 @@ figure {
 /* Footer */
 footer#colophon {
 	background: $color_footer_bg;
-	color: $color__border-abbr;
+	color: $color_white;
 	width: 100%;
 	position: relative;
 	z-index: 1;
@@ -277,7 +324,7 @@ footer#colophon {
 	}
 	.site-info {
 		background-color: transparent;
-		background-image: linear-gradient(275deg, $color_footer_bg 39%, $color_red 100%);
+		background-image: linear-gradient(275deg, $color_footer_bg 39%, $color_primary 100%);
 	}
 }
 
