--- a/sass/abstracts/variables/_colors.scss
+++ b/sass/abstracts/variables/_colors.scss
@@ -1,6 +1,7 @@
 $color_primary: #76324b;
 $color_secondary: #636468;
 $color_white: #fff;
+$color_cream_white: #f8f8f8;
 $color_black: #000;
 $color_grey: #ccc;
 $color_dark_grey: #666;
